--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "less": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
